module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.9",
    is_default = True,
)
python.toolchain(
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_3_9", "python_versions")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "requirements_3_9.txt",
)
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "requirements_3_11.txt",
)

use_repo(pip, "pip")